# package_1

./: .coverage  .gitignore  Makefile  setup.cfg
.github/workflows/: pythonpackage.yml
package_1/: command_line.py  lib.py  module_1.py
package_1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
package_1/package_1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_distance.py  test_lib.py
