[metadata]
name = package_1
version = 0.0.1
author =  vacarme
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = package_1
[options.entry_points]
console_scripts =
    hello = package_1.command_line:main
  install_requires = ['coverage']
